# fyrox-savegame-free

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: error.rs  integrity.rs  lib.rs  metadata.rs  migration.rs  save_file.rs  slot.rs
tests/: integration.rs
